<resources>
    <string name="app_name">TransportPro</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="rememberUser">Remember Me</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="name">Enter Full Name</string>
    <string name="email">Enter E-mail</string>
    <string name="phoneNo">Enter Phone Number (+60XXXXXXXXX)</string>
    <string name="passwordReenter">Re-enter Password</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="tryAgain">Try Again</string>
    <string name="home">Home</string>
    <string name="booking">Booking</string>
    <string name="notification">Notification</string>
    <string name="pricing">Pricing</string>
    <string name="transportationType">Transport</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="parcel">Parcel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="choice_items">
        <item>TransportPro Wallet</item>
        <item>Tng Wallet</item>
        <item>Online Banking</item>
        <item>Debit/Credit Card</item>

    </string-array>

    <string-array name="announcement_types">
        <item>Maintenance</item>
        <!--<item>Type 2</item>
        <item>Type 3</item>-->
    </string-array>

</resources>