<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpPage">

    <ImageButton
        android:id="@+id/backIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        app:srcCompat="@drawable/back_arrow"
        android:background="@color/white"
        android:onClick="backLoginPage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="23dp"
        android:text="Create New Account"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayoutName"
        android:layout_marginTop="20dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayoutUsername"
        android:layout_marginTop="5dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayoutEmail"
        android:layout_marginTop="5dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayoutPhoneNumber"
        android:layout_marginTop="5dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phoneNo"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayoutPassword"
        android:layout_marginTop="5dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:helperTextTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayoutRepeatPassword"
        android:layout_marginTop="5dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordReenter"
        app:errorTextColor="@color/red"
        app:boxCornerRadiusBottomEnd="7dp"
        app:boxCornerRadiusBottomStart="7dp"
        app:boxCornerRadiusTopEnd="7dp"
        app:boxCornerRadiusTopStart="7dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reenterPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/terms_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:text="Read Privacy Policies"
        android:textColor="@color/blue"
        android:textSize="14sp"
        android:clickable="true"
        android:autoLink="none"
        android:paddingTop="10dp" />

    <CheckBox
        android:id="@+id/privacy_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:text="I have read and accept the Privacy Policies"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:gravity="center"
        app:cornerRadius="7dp"
        android:backgroundTint="@color/purple"
        android:text="@string/signup"
        android:textSize="16sp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:gravity="center"
        app:cornerRadius="7dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/purple"
        android:backgroundTint="@color/white"
        android:text="@string/cancel"
        android:textSize="16sp"
        android:textColor="@color/purple"
        android:onClick="backLoginPage"/>

</LinearLayout>